<resources>
    <string name="app_name">Parenthood</string>

    <string name="connect_with"><u>Or connect with</u></string>
    <string name="long_text">Education is the process of facilitating learning, or the acquisition
of knowledge, skills, values, morals, beliefs, and habits.
Educational methods include teaching, training, storytelling,
discussion and directed research. Education frequently takes place
under the guidance of educators, however learners can also
educate themselves. Education can take place in formal or
informal settings and any experience that has a formative effect
on the way one thinks, feels, or acts may be considered
educational. The methodology of teaching is called pedagogy.

Formal education is commonly divided formally into such stages
as preschool or kindergarten, primary school, secondary school
and then college, university, or apprenticeship.</string>
    <string name="btnlogin">Login</string>
    <string name="LogInText">Enter Login Id</string>
    <string name="PasswordText">Enter Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CreatePin">Create Pin For Security</string>
    <string name="EnterPin">Enter Pin</string>
    <string name="ConfirmPin">Confirm Pin</string>
    <string name="Mismatch">Mismatch in your pin please try another time</string>
    <string name="blocked">You are BLOCKED using this app</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="nothing">nothing</string>
    <string name="inactive_in">Block Between</string>
    <string name="de_active_for">Block For :</string>
    <string name="hr">Hr</string>
    <string name="min">Min</string>
    <string name="dot">....</string>
    <string name="time_diff">HH:MM:AA</string>
    <string name="and">And</string>
    <string name="_00_00">00:00</string>
    <string name="app_history">App History</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="dev_con">DeviceControl</string>
    <string name="menu">menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="historyTime" translatable="false">HH:MM:AA PM</string>
    <string name="removetask">removeTask</string>
    <string name="taaskdescperm">Permanently blocked</string>
    <string name="version">version 1.2</string>
    <string name="developer">Developed by Mydeen</string>
    <string name="to">to</string>
    <string name="delete">delete</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="outgoing_calls">OutGoing Calls</string>
    <string name="accessibility_service_name">Parenthood(CYS) App - App Block Service</string>
    <string name="accessibility_service_name_website">Parenthood(CYS) App - Website Block Service</string>
    <string name="accessibility_service_description">Just for Test</string>
    <string name="aboutTitle">About</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="sec">sec</string>
    <string name="h">h</string>
    <string name="ss">s</string>
    <string name="mm">m</string>
    <string name="applist">Apps List</string>
    <string name="hrs">Hours :</string>
    <string name="mins">Minutes</string>
    <string name="permmsg">You have turned off this app permanently</string>
    <string name="openmsg">You can\'t open this type of apps</string>
    <string name="pinwrongmsg">Please Enter Correct Pin</string>
    <string name="alerttitle">Accessibility Service</string>
    <string name="perminfo">Allow this permission for us to give app actions</string>
    <string name="pls">Please Enter the Pin correctly</string>
    <string name="pinsuc">Pin Created Successfully and app will restart again</string>
    <string name="pinwrg">Enter pin correctly</string>
    <string name="tasklist">Task List</string>
    <string name="deletemsg">Do you want to permanently delete all app history?</string>
    <string name="deletetitle">Delete History</string>
    <string name="allowed">Allowed only</string>
    <string name="blockbet">Blocked Between</string>
    <string name="english">english</string>
    <string name="tamil">tamil</string>
    <string name="lang">Select Language</string>
    <string name="weekday">Week Days</string>
    <string name="devcon">Device Control</string>
    <string name="wifisetting">Wifi Setting</string>
    <string name="bluetoothsetting">Bluetooth Setting</string>
    <string name="login">Log In</string>
    <string name="signup">Sign up</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="historysettingtitle">Turn history on/off</string>
    <string name="hisDesc">turn on if you don\'t want see child\'s history</string>
    <string name="shutTitle">Shutdown Parenthood</string>
    <string name="shutDesc">Check if you want to stop controlling application using Parenthood</string>
    <string name="app_block_method">Choose how app should block</string>
    <string name="blockapp">Show block app screen</string>
    <string name="listapp">Listing apps</string>
    <string name="listappdesc">Please wait, we are listing your apps...</string>
    <string name="source_code">Source Code</string>
    <string name="unindesc">Check if you want to prevent kids from uninstalling this application</string>
    <string name="uninstit">Prevent uninstalling</string>
    <string name="h1">To delete any task click this button</string>
    <string name="h2">Click this button to add new task to prevent child from using app</string>
    <string name="h3">Enable this service to give our uninterrupted service </string>
    <string name="h4">Our service name looks like this.You can click to enable it</string>
    <string name="h5">Create a pin then only you can use this awesome application</string>
    <string name="h6">You can see apps history in this view. Click this button to delete all history</string>
    <string name="h7">Warning: if you check this button then all running tasks will be  paused</string>
    <string name="h8">Select app and turn this switch on to block permanently selected app</string>
    <string name="h9">You can give specified time to enable this app after finishing that time the app will be blocked. Be sure to turn on button</string>
    <string name="h10">You can block app in specified time interval and set week days. Be sure to turn on button</string>
    <string name="h11">Check the week days to block the particular application</string>
    <string name="help">help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-->>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
    <string name="action_settings">Settings</string>

    <string name="like_this_app">Like this app?</string>
    <string name="home_button_rate">Rate the app!</string>
    <string name="home_button_continue">Cool, lets get started.</string>
    <string name="home_give_back">Now you give only it\'s worth to you.</string>
    <string name="powered_by">Powered by block-this.com</string>

    <string name="additional_info"></string>
    <string name="title_activity_blank_activiy">BlankActiviy</string>

    <string name="hello_world">Hello world!</string>
    <string name="feel_freedom">Start and feel the freedom.</string>

    <string name="feature_1_title">No Ads</string>
    <string name="feature_1_subtitle">Banners, video and audio ads.</string>
    <string name="feature_2_title">No Tracking</string>
    <string name="feature_2_subtitle">Block tracking cookies.</string>
    <string name="feature_3_title">Faster Browsing</string>
    <string name="feature_3_subtitle">30% less data consumption.</string>
    <string name="feature_5_title">Antivirus protection</string>
    <string name="feature_5_subtitle">Block malware and virus downloads.</string>
    <string name="feature_4_title">Autostart</string>
    <string name="feature_4_subtitle">Automatically start up on boot.</string>
    <string name="feature_6_title">Battery life</string>
    <string name="feature_6_subtitle">Increased battery life.</string>
    <string name="title_activity_auto_launch">AutoLaunchActivity</string>
    <string name="title_activity_donate">DonateActivity</string>

    <string name="title">We need your support!</string>
    <string name="paragraph1" translatable="false">If you share my vision and wish this app to remain free for everyone, please consider supporting it via one of the following methods.</string>
    <string name="patrion">1. Become a patron.</string>
    <string name="paragraph2">The best way you can help, and get rewards doing so, is by becoming a patron.</string>
    <string name="donate_patrion">Become a Patron and get rewards.</string>
    <string name="paypal">2. Contribute via PayPal</string>
    <string name="paragraph3">Alternatively, you can help by donating via PayPal.</string>
    <string name="donate_paypal">Donate via PayPal.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="install_games_helps">By installing any of those apps, you help Block This to remain free. Thank you.</string>
    <string name="no_games_available">Sorry, there are no games available in your region. Please check again later.</string>

    <string name="donate_page_subtitle">Block This is FREE and does\'t sell your personal data or show you ads.
         The only way for me to pay the bills is by asking for your support here. If you wish to help out, here are some options. Thank you.</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
